<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="59dp"
        android:fontFamily="sans-serif"
        android:text="@string/SignUpHeader"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"

        app:layout_constraintStart_toEndOf="@+id/closeButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/nameText"
        android:layout_width="379dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_border"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"
        android:hint="Enter name"
        android:textColor="#878787"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpText" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/emailAddressText"
        android:layout_width="379dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_border"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:hint="Enter email"
        android:textColor="#878787"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/passwordText"
        android:layout_width="379dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_border"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="Enter password"
        android:textColor="#878787"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressText" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/ageText"
        android:layout_width="379dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_border"
        android:ems="10"
        android:hint="Enter your age"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="#878787"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

<!--    <Button-->
<!--        android:id="@+id/buttonCaretaker"-->
<!--        android:layout_width="151dp"-->
<!--        android:layout_height="54dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="328dp"-->

<!--        android:layout_marginEnd="16dp"-->
<!--        android:backgroundTint="#FAFFFF"-->
<!--        android:text="@string/Caregiver"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="10sp"-->
<!--        app:cornerRadius="50dp"-->
<!--        app:iconTint="#FFFFFF"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/SignUpText"-->
<!--        app:strokeColor="#5DABB0"-->
<!--        app:strokeWidth="1dp" />-->

<!--    <Button-->
<!--        android:id="@+id/buttonPatient"-->
<!--        android:layout_width="151dp"-->
<!--        android:layout_height="54dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="328dp"-->

<!--        android:layout_marginEnd="16dp"-->
<!--        android:backgroundTint="#FAFFFF"-->
<!--        android:text="@string/Patient"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="10sp"-->
<!--        app:cornerRadius="50dp"-->
<!--        app:iconTint="#FFFFFF"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/SignUpText"-->
<!--        app:strokeColor="#5DABB0"-->
<!--        app:strokeWidth="1dp" />-->

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="379dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#5DABB0"
        android:text="@string/SignUp"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageText" />

    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:id="@+id/group_choices"
        android:layout_width="241dp"
        android:layout_height="28dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="19dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageText"
        app:layout_constraintVertical_bias="0.32"
        app:tbgCheckedButton="@+id/buttonCaregiver">

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/buttonCaregiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Caregiver"
            tools:ignore="TouchTargetSizeCheck" />

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/Patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient"
            tools:ignore="TouchTargetSizeCheck" />

        <!--...-->

    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

    <TextView
        android:id="@+id/ForgotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="172dp"
        android:text="@string/ForgotPassword"
        android:textColor="#5DABB0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Forgot your password?" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_close_24"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/SignUpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
