<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity">

    <View
        android:id="@+id/view"
...

    <TextView
        android:id="@+id/home_text"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:text="Home"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextSizeCheck" />


    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="308dp"
        android:backgroundTint="#5DABB0"
        android:fontFamily="sans-serif"
...
